DietPi-Sync | Once sync is completed, you will be asked if you wish to view the log file, for the full rsync log.
DietPi-Update | G_AGUP/G_AGUG: Now runs prior to our patch system. Ensuring APT is upto date during our updates: http://dietpi.com/phpbb/viewtopic.php?f=11&t=2894&p=11150#p11149
Bug Fixes:
General | Resolved POSIX issues with dropbear (limitation) and SSH sessions. We now detect for presence of POSIX and set user selected locale during session load: https://github.com/Fourdee/DietPi/issues/1540
DietPi-Software | Desktops: USB drive removed from .gtk-bookmarks as no longer used in DietPi.
DietPi-Software | Shairport-Sync: Resolved ARMv6 binary Illegal instruction: https://github.com/Fourdee/DietPi/issues/1548
DietPi-Update | Resolved an issue where .update_available would exist during reboot, causing banner to display update available incorrectly: https://github.com/Fourdee/DietPi/issues/1535

-----------------------------------------------------------------------------------------------------------

v6.2
(18/02/18)

Changes / Improvements / Optimizations:
Native PC UEFI | Image now includes options to install to either EMMC (eg: onboard) or SDA (1st HDD) device: https://github.com/Fourdee/DietPi/issues/1171#issuecomment-336522021 | http://dietpi.com/phpbb/viewtopic.php?f=9&t=2809&p=10808#p10808
DietPi-Backup | Rsync: Error control now handled by G_RUN_CMD
DietPi-Config | Locale: Reworked, now only lists UTF-8 items, no longer using dpkg-reconfigure. Our custom set_software script handles all locales ensuring en_GB is always installed, and selected item is applied as system default.
DietPi-Config | Display options > Resolution: Added fkms/kms (OpenGL) modes for RPi 2/3.
DietPi-Config | Sparky SBC: Added option to select usb-dac-1.1 soundcard, which will enable USB1.1 compatibility.
DietPi-Config | WiFi: Now supports connecting to hidden WiFi networks, thanks @shahwahed : https://github.com/Fourdee/DietPi/pull/1497