@@ -3329,7 +3329,7 @@ _EOF_
 
 			G_CHECK_URL "$INSTALL_URL_ADDRESS"
 
-			G_AGI lxde upower policykit-1 iceweasel p7zip-full --no-install-recommends
+			G_AGI lxde upower policykit-1 iceweasel p7zip-full
 			#upower policykit-1. Needed for LXDE logout menu item to show shutdown/restart ......
 
 		fi
@@ -3345,7 +3345,7 @@ _EOF_
 
 			G_CHECK_URL "$INSTALL_URL_ADDRESS"
 
-			G_AGI mate-desktop-environment-extras upower policykit-1 iceweasel p7zip-full --no-install-recommends
+			G_AGI mate-desktop-environment-extras upower policykit-1 iceweasel p7zip-full
 
 		fi
 
@@ -3360,7 +3360,7 @@ _EOF_
 
 			G_CHECK_URL "$INSTALL_URL_ADDRESS"
 
-			G_AGI x-window-system-core wmaker gnustep gnustep-devel gnustep-games libc-dbg upower policykit-1 iceweasel p7zip-full --no-install-recommends
+			G_AGI x-window-system-core wmaker gnustep gnustep-devel gnustep-games libc-dbg upower policykit-1 iceweasel p7zip-full
 
 		fi
 
@@ -3375,7 +3375,7 @@ _EOF_
 
 			G_CHECK_URL "$INSTALL_URL_ADDRESS"
 
-			G_AGI xfce4 xfce4-terminal gnome-icon-theme tango-icon-theme iceweasel p7zip-full --no-install-recommends
+			G_AGI xfce4 xfce4-terminal gnome-icon-theme tango-icon-theme iceweasel p7zip-full
 
 		fi
 
@@ -3447,7 +3447,7 @@ _EOF_
 		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
 
 			Banner_Installing
-			G_AGI samba samba-common-bin --no-install-recommends
+			G_AGI samba samba-common-bin
 
 		fi
 
@@ -3457,7 +3457,7 @@ _EOF_
 
 			Banner_Installing
 
-			G_AGI vsftpd --no-install-recommends
+			G_AGI vsftpd
 
 		fi
 
@@ -3683,7 +3683,7 @@ _EOF_
 
 					#libupnp6 for net discov with upnp/avahi
 					G_AGI libupnp6
-					G_AGI libmpdclient2 libao-common libao4 libasound2 libasound2-data libasyncns0 libaudiofile1 libavahi-client3 libavahi-common-data libavahi-common3 libavcodec56 libavformat56 libavresample2 libavutil54 libbinio1ldbl libcaca0 libcdio-cdda1 libcdio-paranoia1 libcdio13 libcups2 libcurl3-gnutls libdirectfb-1.2-9 libdnet libfaad2 libflac8 libfluidsynth1 libgme0 libgomp1 libgsm1 libice6 libid3tag0 libiso9660-8 libjack-jackd2-0 libjson-c2 libldb1 libmad0 libmikmod3 libmms0 libmodplug1 libmp3lame0 libmpcdec6 libmpg123-0 libnfs4 libntdb1 libogg0 libopenal-data libopenal1 libopenjpeg5 libopus0 liborc-0.4-0 libpulse0 libresid-builder0c2a libroar2 libsamplerate0 libschroedinger-1.0-0 libsdl1.2debian libshout3 libsidplay2 libsidutils0 libslp1 libsm6 libsmbclient libsndfile1 libsoxr0 libspeex1 libspeexdsp1 libsqlite3-0 libtalloc2 libtdb1 libtevent0 libtheora0 libupnp6 libva1 libvorbis0a libvorbisenc2 libvorbisfile3 libvpx1 libwavpack1 libwbclient0 libwildmidi-config libwildmidi1 libx11-6 libx11-data libx11-xcb1 libx264-142 libxau6 libxcb1 libxdmcp6 libxext6 libxi6 libxtst6 libxvidcore4 libyajl2 libzzip-0-13 mime-support python python-talloc python2.7 samba-libs x11-common file --no-install-recommends
+					G_AGI libmpdclient2 libao-common libao4 libasound2 libasound2-data libasyncns0 libaudiofile1 libavahi-client3 libavahi-common-data libavahi-common3 libavcodec56 libavformat56 libavresample2 libavutil54 libbinio1ldbl libcaca0 libcdio-cdda1 libcdio-paranoia1 libcdio13 libcups2 libcurl3-gnutls libdirectfb-1.2-9 libdnet libfaad2 libflac8 libfluidsynth1 libgme0 libgomp1 libgsm1 libice6 libid3tag0 libiso9660-8 libjack-jackd2-0 libjson-c2 libldb1 libmad0 libmikmod3 libmms0 libmodplug1 libmp3lame0 libmpcdec6 libmpg123-0 libnfs4 libntdb1 libogg0 libopenal-data libopenal1 libopenjpeg5 libopus0 liborc-0.4-0 libpulse0 libresid-builder0c2a libroar2 libsamplerate0 libschroedinger-1.0-0 libsdl1.2debian libshout3 libsidplay2 libsidutils0 libslp1 libsm6 libsmbclient libsndfile1 libsoxr0 libspeex1 libspeexdsp1 libsqlite3-0 libtalloc2 libtdb1 libtevent0 libtheora0 libupnp6 libva1 libvorbis0a libvorbisenc2 libvorbisfile3 libvpx1 libwavpack1 libwbclient0 libwildmidi-config libwildmidi1 libx11-6 libx11-data libx11-xcb1 libx264-142 libxau6 libxcb1 libxdmcp6 libxext6 libxi6 libxtst6 libxvidcore4 libyajl2 libzzip-0-13 mime-support python python-talloc python2.7 samba-libs x11-common file
 
 					wget "$INSTALL_URL_ADDRESS" -O package.deb
 					dpkg -i package.deb
@@ -4067,7 +4067,7 @@ _EOF_
 				#XU4 - requires pulse audio (fixes corrupt sound)
 				if (( $G_HW_MODEL == 11 )); then
 
-					G_AGI pulseaudio --no-install-recommends
+					G_AGI pulseaudio
 
 				fi
 
@@ -4246,7 +4246,7 @@ _EOF_
 			INSTALL_URL_ADDRESS="http://dietpi.com/downloads/binaries/rpi/opentyrian_armhf.zip"
 			G_CHECK_URL "$INSTALL_URL_ADDRESS"
 
-			G_AGI ibsdl1.2debian libsdl-net1.2 --no-install-recommends
+			G_AGI ibsdl1.2debian libsdl-net1.2
 
 			#Download binaries
 			wget "$INSTALL_URL_ADDRESS" -O package.zip
@@ -4732,7 +4732,7 @@ _EOF_
 			G_CHECK_URL "$INSTALL_URL_ADDRESS"
 
 			#Python dev, pre-reqs
-			G_AGI python-dev python-setuptools --no-install-recommends
+			G_AGI python-dev python-setuptools
 
 			#Install WEBIOPI
 			wget "$INSTALL_URL_ADDRESS" -O package.tar
@@ -4866,7 +4866,7 @@ _EOF_
 
 			Banner_Installing
 
-			G_AGI tightvncserver x11vnc --no-install-recommends
+			G_AGI tightvncserver x11vnc
 
 		fi
 
@@ -4876,7 +4876,7 @@ _EOF_
 
 			Banner_Installing
 
-			G_AGI vnc4server x11vnc --no-install-recommends
+			G_AGI vnc4server x11vnc
 
 			# - Stretch+
 			if (( $G_DISTRO >= 4 )); then
@@ -4917,7 +4917,7 @@ _EOF_
 
 			touch /var/log/auth.log #: https://github.com/Fourdee/DietPi/issues/475#issuecomment-310873879
 
-			G_AGI fail2ban --no-install-recommends
+			G_AGI fail2ban
 
 		fi
 
@@ -5211,7 +5211,7 @@ _EOF_
 			G_CHECK_URL "$INSTALL_URL_ADDRESS"
 
 			# - Prereqs
-			G_AGI openssl libsoxr0 libavahi-client3 libtool libconfig9 libpopt0 libdaemon0 --no-install-recommends
+			G_AGI openssl libsoxr0 libavahi-client3 libtool libconfig9 libpopt0 libdaemon0
 
 			# This occured on C2: shairport-sync : Depends: libpopt-dev but it is not installed
 			#G_AGI libpopt-dev
@@ -5318,7 +5318,7 @@ _EOF_
 			G_CHECK_URL "$INSTALL_URL_ADDRESS"
 
 			# - Prereqs
-			G_AGI minicom python-serial python-configobj --no-install-recommends
+			G_AGI minicom python-serial python-configobj
 			pip install paho-mqtt pydispatcher
 
 			wget "$INSTALL_URL_ADDRESS" -O package.zip
@@ -5386,7 +5386,7 @@ _EOF_
 			G_CHECK_URL "$INSTALL_URL_ADDRESS"
 
 			# - For compression
-			G_AGI --no-install-recommends zlib1g-dev
+			G_AGI zlib1g-dev
 
 			wget "$INSTALL_URL_ADDRESS" -O package.deb
 			dpkg -i package.deb
@@ -6795,7 +6795,7 @@ libusb-dev libglib2.0-dev libudev-dev libical-dev libreadline-dev libsbc1 libsbc
 			Banner_Installing
 
 			#Xserver Prereqs (ALL)
-			G_AGI xcompmgr xterm xinit xauth xserver-xorg dbus-x11 xfonts-base x11-xserver-utils x11-common x11-utils libgl1-mesa-dri libgles2-mesa mesa-utils --no-install-recommends
+			G_AGI xcompmgr xterm xinit xauth xserver-xorg dbus-x11 xfonts-base x11-xserver-utils x11-common x11-utils libgl1-mesa-dri libgles2-mesa mesa-utils
 
 			#Improve performance on all desktops and devices (eg: removes window lag in desktops) by limiting compositions
 			mkdir -p /etc/xdg/autostart
@@ -6815,7 +6815,7 @@ _EOF_
 			#Odroid C2
 			elif (( $G_HW_MODEL == 12 )); then
 
-				G_AGI aml-libs-odroid mali450-odroid xf86-video-mali-odroid libump-odroid --no-install-recommends
+				G_AGI aml-libs-odroid mali450-odroid xf86-video-mali-odroid libump-odroid
 				#cp /DietPi/dietpi/conf/xorg_c2.conf /etc/X11/xorg.conf
 
 				#	FBTURBO C2, provides much better desktop performance over Mali DDX: http://forum.odroid.com/viewtopic.php?f=138&t=19948&p=169808#p169808
@@ -6833,14 +6833,14 @@ _EOF_
 			#Odroid XU4
 			elif (( $G_HW_MODEL == 11 )); then
 
-				G_AGI firmware-samsung xf86-video-armsoc-odroid malit628-odroid --no-install-recommends
+				G_AGI firmware-samsung xf86-video-armsoc-odroid malit628-odroid
 
 				cp /DietPi/dietpi/conf/xorg_xu4.conf /etc/X11/xorg.conf
 
 			#Odroid C1
 			elif (( $G_HW_MODEL == 10 )); then
 
-				G_AGI aml-libs-odroid xf86-video-mali-odroid libump-odroid mali450-odroid --no-install-recommends
+				G_AGI aml-libs-odroid xf86-video-mali-odroid libump-odroid mali450-odroid
 
 				cp /DietPi/dietpi/conf/xorg_c1.conf /etc/X11/xorg.conf
 
@@ -6911,7 +6911,7 @@ _EOF_
 		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
 
 			Banner_Installing
-			G_AGI build-essential make autoconf automake --no-install-recommends
+			G_AGI build-essential make autoconf automake
 
 		fi
 
@@ -6941,7 +6941,7 @@ _EOF_
 		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
 
 			Banner_Installing
-			G_AGI git --no-install-recommends
+			G_AGI git
 
 		fi
 
@@ -7065,7 +7065,7 @@ _EOF_
 			#Remove Information file
 			rm /mnt/samba/readme.txt &> /dev/null
 
-			G_AGI smbclient cifs-utils --no-install-recommends
+			G_AGI smbclient cifs-utils
 
 		fi
 
@@ -7108,7 +7108,7 @@ _EOF_
 		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
 
 			Banner_Installing
-			G_AGI openssh-server --no-install-recommends
+			G_AGI openssh-server
 
 
 			# - Remove all references before adding the entry: https://github.com/Fourdee/DietPi/issues/604
@@ -7151,7 +7151,7 @@ _EOF_
 		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
 
 			Banner_Installing
-			G_AGI logrotate --no-install-recommends
+			G_AGI logrotate
 
 		fi
 
@@ -7159,7 +7159,7 @@ _EOF_
 		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
 
 			Banner_Installing
-			G_AGI rsyslog --no-install-recommends
+			G_AGI rsyslog
 
 		fi
 
