@@ -267,8 +267,18 @@ _EOF_
 
 		done
 		#-------------------------------------------------------------------------------
-		#Remove any existing apt recommends settings, defaults to "yes", allows us to manually --no-install-recommends as needed: https://github.com/Fourdee/DietPi/issues/1482#issuecomment-366971700
-		rm /etc/apt/apt.conf.d/*recommends*
+		#Remove any existing apt recommends settings, before applying ours: https://github.com/Fourdee/DietPi/issues/1482#issuecomment-368031044
+		rm /etc/apt/apt.conf.d/*recommends* &> /dev/null
+
+		export G_ERROR_HANDLER_COMMAND='/etc/apt/apt.conf.d/99-dietpi-norecommends'
+		cat << _EOF_ > $G_ERROR_HANDLER_COMMAND
+APT::Install-Recommends "false";
+APT::Install-Suggests "false";
+#APT::AutoRemove::RecommendsImportant "false";
+#APT::AutoRemove::SuggestsImportant "false";
+_EOF_
+		export G_ERROR_HANDLER_EXITCODE=$?
+		G_ERROR_HANDLER
 		#-------------------------------------------------------------------------------
 		#Reinstalls:
 		#	Shairport-sync 3.1.7
