@@ -15,8 +15,10 @@ DietPi-Software | Shairport-sync: Updated to 3.1.7 for all devices. Also enabled
 DietPi-Software | Proftp: Now defaults to dietpi user with root login off: https://github.com/Fourdee/DietPi/issues/1529#issuecomment-367644593
 DietPi-Sync | Once sync is completed, you will be asked if you wish to view the log file, for the full rsync log.
 DietPi-Update | G_AGUP/G_AGUG: Now runs prior to our patch system. Ensuring APT is upto date during our updates: http://dietpi.com/phpbb/viewtopic.php?f=11&t=2894&p=11150#p11149
+
 Bug Fixes:
 General | Resolved POSIX issues with dropbear (limitation) and SSH sessions. We now detect for presence of POSIX and set user selected locale during session load: https://github.com/Fourdee/DietPi/issues/1540
+General | APT: 'Disabled install recommends' is now standard and default across all DietPi images: https://github.com/Fourdee/DietPi/issues/1482#issuecomment-368031044
 DietPi-Software | Desktops: USB drive removed from .gtk-bookmarks as no longer used in DietPi.
 DietPi-Software | Shairport-Sync: Resolved ARMv6 binary Illegal instruction: https://github.com/Fourdee/DietPi/issues/1548
 DietPi-Update | Resolved an issue where .update_available would exist during reboot, causing banner to display update available incorrectly: https://github.com/Fourdee/DietPi/issues/1535
